# Programming_project

./: CMakeLists.txt  Makefile  README.md  environment.yml
include/: game.h  input.h  stats.h  timer.h  ui_sdl.h  utils.h  word_list.h  word_list_async.h
src/: CMakeLists.txt  game.c  input.c  main.c  stats.c  timer.c  ui_sdl.c  utils.c  word_list.c  word_list_async.c
tests/: CMakeLists.txt  run_tests.c  test_game_logic.c  test_stats.c  test_timer.c  test_words.c
typing_race_final_with_cmake/: CMakeLists.txt
typing_race_final_with_cmake/assets/: words.txt
typing_race_final_with_cmake/include/: game.h  input.h  ui_sdl.h
typing_race_final_with_cmake/src/: input.c  ui_sdl.c
